# cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: headless.rs  main.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
