[package]
name = "bitvanes-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Terminal ETL tool for BitVanes — zero-trust document chunking for RAG"
repository = "https://github.com/BitVanes/cli"
homepage = "https://bitvanes.com"
keywords = ["etl", "rag", "ai", "chunking", "arrow"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "bitvanes"
path = "src/main.rs"

[dependencies]
bitvanes-core = { git = "https://github.com/BitVanes/core.git", tag = "v0.1.1", features = ["ipc", "csv", "cli-pdf", "parallel"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
rayon = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
