[package]
name = "bitvanes-cli"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Terminal ETL tool for BitVanes — zero-trust document chunking for RAG"
repository = "https://github.com/BitVanes/cli"
homepage = "https://bitvanes.com"
keywords = ["etl", "rag", "ai", "chunking", "arrow"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[[bin]]
name = "bitvanes"
path = "src/main.rs"

[features]
default = []
# Enable `--embed` (on-device embeddings via ONNX Runtime). Off by default:
# linking the prebuilt `ort` static lib needs glibc >= 2.38, which the Linux
# release runner (ubuntu-22.04) lacks. Build with `--features embed` locally.
embed = ["bitvanes-core/embeddings"]

[dependencies]
bitvanes-core = { path = "../core/crates/core", features = ["ipc", "csv", "cli-pdf", "parallel", "office", "mmap"] }
blake3 = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
glob = "0.3"
indicatif = "0.17"
ratatui = "0.29"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
